--- a/src/main/resources/static/home.css
+++ b/src/main/resources/static/home.css
@@ -1,35 +1,72 @@
 nav {
 	display: flex;
 	justify-content: center;
-	background-color: #333;
+	align-items: center;
+	background-color: transparent;
 	padding: 10px;
+	 border-bottom: 1px solid  #e2e2e2;
+	 
+}
+
+
+.logo {
+	max-height: 63px;
+	max-width: 63px;
 }
 
 nav a {
-	color: white;
+	color: #e2e2e2;
 	text-decoration: none;
 	padding: 10px;
 	margin: 0 10px;
-	font-weight: bold;
+	letter-spacing: 2px;
+	align-items: center;
+	font-size: 16px;
+	font-family: Tahoma;
+}
+
+nav a:hover::after {
+	content: "";
+	display: block;
+	height: 3px;
+	width: 100%;
+	background-color: #33FF46;
+	margin-top: 5px;
+	padding: 0 5px; /* Add padding to the line */
+}
+
+nav a::after {
+	content: "";
+	display: block;
+	height: 3px;
+	width: 0%;
+	background-color: #33FF46;
+	margin-top: 5px;
+	transition: width 0.3s ease-in-out; /* Add transition effect */
+}
+
+nav a:hover::after {
+	width: 100%; /* Increase the width on hover */
 }
 
 nav a:hover {
-	background-color: #555;
+	background-color: transparent;
+	color: #33FF46;
 }
 
 .search-container {
 	display: flex;
 	align-items: center;
-	margin-left: auto;
-	padding-right: 20px;
+	background-color: transparent;
+	border-color: white;
 }
 
 .search-container input[type="text"] {
 	padding: 10px;
-	border: none;
 	font-size: 16px;
-	background-color: #f2f2f2;
-	border-radius: 5px;
+	background-color: transparent;
+	border-radius: 10px;
+	border-color: white;
 }
 
 .search-container button {
@@ -42,53 +79,104 @@ nav a:hover {
 	border-radius: 5px;
 }
 
-.slide-container {
-	width: 800px;
-	height: 600px;
-	margin-left: auto;
-	margin-right: auto;
-	overflow: hidden;
-	text-align: center;
+body {
+	margin: 0;
+	background-image: linear-gradient(to right top, #151616, #202426, #2c3337, #3c414a,
+		#504f5c);
 }
 
-.image-container {
-	width: 2400px;
-	height: 600px;
+.slideshow-container {
+	padding-top: 20px;
+	padding-bottom: 20px;
 	position: relative;
-	transition: left 2s;
-	-webkit-transition: left 2s;
-	-moz-transition: left 2s;
-	-o-transition: left 2s;
+	max-width: 800px;
+	margin: auto;
 }
 
-.slider-image {
-	float: left;
-	margin: 0px;
-	padding: 0px;
+.mySlides {
+	display: none;
 }
 
-.button-container {
-	top: -20px;
-	position: relative;
-}
-
-.slider-button {
-	display: inline-block;
-	height: 10px;
-	width: 10px;
-	border-radius: 5px;
-	background-color: white;
+.prev, .next {
+	position: absolute;
+	top: 50%;
+	margin-top: -22px;
+	font-size: 18px;
+	font-weight: bold;
+	padding: 10px;
+	color: #fff;
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 0 3px 3px 0;
 	cursor: pointer;
 }
 
-#slider-image-1:target ~ .image-container {
-	left: 0px;
+.prev {
+	left: 0;
+	border-radius: 3px 0 0 3px;
 }
 
-#slider-image-2:target ~ .image-container {
-	left: -800px;
+.next {
+	right: 0;
+	border-radius: 0 3px 3px 0;
 }
 
-#slider-image-3:target ~ .image-container {
-	left: -1600px;
+.prev:hover, .next:hover {
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+.dot-container {
+	text-align: center;
+	margin-top: 20px;
+}
+
+.dot {
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	margin: 0 5px;
+	background-color: #bbb;
+	border-radius: 50%;
+	cursor: pointer;
+	transition: background-color 0.5s ease;
+}
+
+.active, .dot:hover {
+	background-color: #717171;
+}
+
+.top-half {
+	background-image: linear-gradient(to right top, #151616, #202426, #2c3337, #3c414a,
+		#504f5c);
+	padding: 0;
+}
+
+.BH-head {
+	color: #e2e2e2;
+	text-align: center;
+	text-decoration: none;
+	padding: 10px;
+	margin: 0 10px;
+	letter-spacing: 8px;
+	align-items: center;
+	font-size: 30px;
+	font-family: Tahoma;
+
+	text-align: center;
+
+}
+p::after  {
+	content: "";
+	display: block;
+	height: 1px;
+	width: 60%;
+	background-color: #e2e2e2;
+	 margin: 0 auto;
+	margin-top: 10px;
+	}
+
+.bottom-half {
+	background-image: linear-gradient(to right top, #151616, #202426, #2c3337, #3c414a,
+		#504f5c);
+	padding: 0;
+	
 }
