--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
 <title>Centered Navbar with Search Bar Example</title>
-<link rel="stylesheet" type="text/css" href="home.css">
+<link rel="stylesheet" type="text/css" href="home/home.css">
 
 </head>
 <body>
@@ -32,7 +32,7 @@
 				onclick="plusSlides(1)">&#10095;</a>
 		</div>
 
-		<script src="home.js"></script>
+		<script src="home/home.js"></script>
 	</div>
 	<div class="bottom-half">
 		
