--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -2,42 +2,23 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
 <title>Centered Navbar with Search Bar Example</title>
-<link rel="stylesheet" type="text/css" href="forum.css">
+<link rel="stylesheet" type="text/css" href="forum.css" />
 
 </head>
 <body>
-<div class="top-half">
+	<div class="top-half">
 		<nav>
 			<img style="padding-left: 30px;" class="logo"
 				th:src="@{/images/8.png}" alt="Logo"> <a href="#"
-				style="padding-left: 30px;">HOME</a> 
-				<a href="/forum/" style="padding-left: 30px;">CHAT</a> 
-				<a href="/routes/" style="padding-left: 30px;">ROUTES</a>
-			<!-- 		<div class="search-container"> -->
-			<!-- 			<input type="text" placeholder="Search..."> -->
-			<!-- 			<button type="submit">Search</button> -->
-			<!-- 		</div> -->
+				style="padding-left: 30px;">HOME</a> <a href="/forum/"
+				style="padding-left: 30px;">CHAT</a> <a href="/routes/"
+				style="padding-left: 30px;">ROUTES</a>
+			
 		</nav>
-		<div class="slideshow-container">
-			<div class="mySlides fade">
-				<img th:src="@{/images/15-2.jpg}" alt="Slide 1">
-			</div>
-			<div class="mySlides fade">
-				<img th:src="@{/images/14-3.jpg}" alt="Slide 2">
-			</div>
-			<div class="mySlides fade">
-				<img th:src="@{/images/16.jpg}" alt="Slide 3">
-			</div>
-			<a class="prev" onclick="plusSlides(-1)">&#10094;</a> <a class="next"
-				onclick="plusSlides(1)">&#10095;</a>
-		</div>
+		<div class="bottom-half">
 
-		<script src="home.js"></script>
-	</div>
-	<div class="bottom-half">
-		
-			<p class="BH-head">FEATURED ROUTES</p>
-		
-	</div>
+			<p class="BH-head">FORUMS</p>
+
+		</div>
 </body>
-</html>	
+</html>
