--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <h2>Login or Register!</h2>
     <form action="" method="post">
       <label for="username">Username:</label>
-      <input type="text" th:field="${user.username}" id="username" name="username" required>
+      <input type="text" th:field="${user.name}"  required>
       <label for="password">Password:</label>
       <input type="password" th:field="${user.password}" id="password" name="password" required>
       <button type="submit">Login</button>
