--- a/src/main/resources/templates/forums.html
+++ b/src/main/resources/templates/forums.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
 <title>Forum</title>
-<link rel="stylesheet" type="text/css" href="forum.css" />
+<link rel="stylesheet" type="text/css" href="forums.css" />
 
 </head>
 <body>
