--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,8 +11,9 @@
 			<img style="padding-left: 30px;" class="logo"
 				th:src="@{/images/8.png}" alt="Logo"> <a href="#"
 				style="padding-left: 30px;">HOME</a> 
-				<a href="/forum/" style="padding-left: 30px;">CHAT</a> 
+				<a href="/forums/" style="padding-left: 30px;">FORUMS</a> 
 				<a href="/routes/" style="padding-left: 30px;">ROUTES</a>
+				
 			<!-- 		<div class="search-container"> -->
 			<!-- 			<input type="text" placeholder="Search..."> -->
 			<!-- 			<button type="submit">Search</button> -->
