--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
 <title>Centered Navbar with Search Bar Example</title>
-<link rel="stylesheet" type="text/css" href="home/home.css">
+<link rel="stylesheet" type="text/css" href="/home/home.css">
 
 </head>
 <body>
@@ -11,8 +11,9 @@
 			<img style="padding-left: 30px;" class="logo"
 				th:src="@{/images/8.png}" alt="Logo"> <a href="#"
 				style="padding-left: 30px;">HOME</a> 
-				<a href="/forums/" style="padding-left: 30px;">FORUMS</a> 
+				<a th:href="@{/forums/{userId}/(userId=${userId})}" style="padding-left: 30px;">FORUMS</a> 
 				<a href="/routes/" style="padding-left: 30px;">ROUTES</a>
+				<a th:text="'User: ' + ${user}" style="padding-left: 30px; font-style: italic;"></a>
 				
 			<!-- 		<div class="search-container"> -->
 			<!-- 			<input type="text" placeholder="Search..."> -->
@@ -33,7 +34,7 @@
 				onclick="plusSlides(1)">&#10095;</a>
 		</div>
 
-		<script src="home/home.js"></script>
+		<script src="/home/home.js"></script>
 	</div>
 	<div class="bottom-half">
 		
