--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
   <img th:src="@{/images/8.png}" alt="Welcome to Rock On!">
   <div class="login">
     <h2>Login or Register!</h2>
-    <form action="" method="post">
+    <form action="/login" method="post">
       <label for="username">Username:</label>
       <input type="text" th:field="${user.name}"  required>
       <label for="password">Password:</label>
