--- a/src/main/resources/static/forum/forum.css
+++ b/src/main/resources/static/forum/forum.css
@@ -241,20 +241,29 @@ label {
 	font-weight: normal;
 	font-style: italic;
 }
-
 .message-window {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	top: 50%;
-	left: 50%;
-	border: 1px solid black;
-	border-radius: 10px; background-color: #D6D6D6; width : 80%; height :
-	400px; margin : 10px auto; padding : 10px;
-	padding: 10px;
-	
-	width: 80%;
-	height: 400px;
-	margin: 10px auto;
-	padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: #D6D6D6;
+  width: 80%;
+  height: 600px;
+  margin: 10px auto;
+  padding: 10px;
+  overflow-y: scroll;
+}
+
+.message-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.message-text {
+  display: block;
+  margin-bottom: 10px;
 }
