--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -9,11 +9,15 @@
 
 	<nav>
 		<img style="padding-left: 30px;" class="logo"
-			th:src="@{/images/8.png}" alt="Logo"> <a href="/home"
+			th:src="@{/images/8.png}" alt="Logo"> <a
+			th:href="@{/home/{userId}/(userId=${userId})}"
 			style="padding-left: 30px;">HOME</a> <a
 			th:href="@{/forums/{userId}/(userId=${userId})}"
-			style="padding-left: 30px;">FORUMS</a> <a href="/routes/"
-			style="padding-left: 30px;">ROUTES</a>
+			style="padding-left: 30px;">FORUMS</a> <a
+			th:href="@{/routes/{userId}/(userId=${userId})}"
+			style="padding-left: 30px;">ROUTES</a> <a
+			th:text="'User: ' + ${username}"
+			style="padding-left: 30px; font-style: italic;"></a>
 
 	</nav>
 	<div class="bottom-half">
@@ -21,22 +25,11 @@
 		<p class="BH-head" th:text="${channel.channelName}"></p>
 
 	</div>
-	<!-- 	<div> -->
-	<!-- 		<table class="channel-table"> -->
-	<!-- 			<tbody> -->
-	<!-- 				<tr th:each="channel: ${channels}"> -->
-	<!-- 					<td><a class="channels" -->
-	<!-- 						th:href="@{/channel/{channelId}(channelId=${channel.channelId})}" -->
-	<!-- 						th:text="${channel.channelName}"></a> <br /> <span -->
-	<!-- 						class="description"><small th:text="${channel.description}"></small></span> -->
-	<!-- 					</td> -->
-	<!-- 				</tr> -->
-	<!-- 			</tbody> -->
-	<!-- 		</table> -->
-	<!-- 	</div> -->
+
 	<div class="message-window">
 		<div class="message-container">
-			<div th:each="message : ${channel.messages}">
+			<div th:each="message : ${channel.messages}"
+				th:class="${messageStat.odd} ? 'odd' : 'even'">
 				<p class="message-text"
 					th:text="${message.user.name + ': ' + message.message}"></p>
 			</div>
