--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 				th:src="@{/images/8.png}" alt="Logo"> <a href="#"
 				style="padding-left: 30px;">HOME</a> 
 				<a th:href="@{/forums/{userId}/(userId=${userId})}" style="padding-left: 30px;">FORUMS</a> 
-				<a href="/routes/" style="padding-left: 30px;">ROUTES</a>
+				<a th:href="@{/routes/{userId}/(userId=${userId})}" style="padding-left: 30px;">ROUTES</a>
 				<a th:text="'User: ' + ${user}" style="padding-left: 30px; font-style: italic;"></a>
 				
 			<!-- 		<div class="search-container"> -->
@@ -38,7 +38,7 @@
 	</div>
 	<div class="bottom-half">
 		
-			<p class="BH-head">FEATURED ROUTES</p>
+			<p class="BH-head">COMPLETED ROUTES</p>
 		
 	</div>
 
