--- a/src/main/resources/static/home/home.css
+++ b/src/main/resources/static/home/home.css
@@ -195,3 +195,58 @@ html, body {
 .container {
   min-height: 100%;
 }
+.channel-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.channel-table tbody {
+  width: 100%;
+}
+
+.channel-table td {
+  display: table-cell;
+  width: 1%;
+  white-space: nowrap;
+  padding: 5px;
+}
+
+.channel-table tr:nth-child(even) {
+background-image: linear-gradient(to left bottom, #5b5b5b, #6c6c6c, #7e7e7e, #909090, #a3a3a3);     
+}
+
+.channel-table tr:nth-child(odd) {
+  background-image: linear-gradient(to right top, #5b5b5b, #6c6c6c, #7e7e7e, #909090, #a3a3a3);
+  
+}
+
+.channel-table tr:nth-child(even) a,
+.channel-table tr:nth-child(odd) a {
+  color: rgba(255, 255, 255, 1);
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Tahoma;
+  color: #e2e2e2;
+	text-align: center;
+	text-decoration: none;
+	padding: 10px;
+	margin: 0 10px;
+	letter-spacing: 8px;
+}
+.channel-table td {
+  text-align: center;
+  vertical-align: middle;
+}
+.channel-table tr:nth-child(even) a:hover,
+.channel-table tr:nth-child(odd) a:hover {
+  color: #33FF46;
+}
+.description{
+	color: #4A4A4A;
+  font-size: 15px;
+  margin-right: 10px;
+  font-family: Tahoma;
+  font-weight: normal;
+  font-style: italic;
+}
