All features functional (supposedly)

--- a/src/main/resources/templates/forums.html
+++ b/src/main/resources/templates/forums.html
@@ -39,7 +39,7 @@
 	<div class="form-container">
 		<form method="post" th:action="@{/forums/{userId}/(userId=${userId})}">
 			<div>
-				<label>New Channel: </label> <input type="text"
+				<label>New Forum: </label> <input type="text"
 					th:field="${channel.channelName}" />
 			</div>
 			<div>
