--- a/src/main/resources/templates/route.html
+++ b/src/main/resources/templates/route.html
@@ -31,7 +31,7 @@
 			<div class="value" th:text="${route.name}"></div>
 		</div>
 		<div>
-			<div class="field" th:text="'FA: '"></div>
+			<div class="field" th:text="'First Ascent: '"></div>
 			<div class="value" th:text="${route.firstAscent}"></div>
 		</div>
 		<div>
