--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html xmlns:th="http://thymeleaf.org">
 <head>
 <title>Login</title>
-<link rel="stylesheet" type="text/css" href="login.css" />
-
 </head>
 <body>
-	
-
-	<form action="${loginProcessingUrl}" method="post">
+	<form action="/home" method="post">
 		<fieldset>
 			<legend>Please Login</legend>
 			<!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
-
 			<div th:if="${param.error != null}">
 				Failed to login.
 				<div th:if="${SPRING_SECURITY_LAST_EXCEPTION != null}">
 					Reason: <span th:text="${SPRING_SECURITY_LAST_EXCEPTION.message}"></span>
 				</div>
 			</div>
-			
 			<!-- the configured LogoutConfigurer#logoutSuccessUrl is /login?logout and contains the query param logout -->
-			
-				<div th:if="${param.logout != null}">You have been logged out.</div>
-			
+			<div th:if="${param.logout != null}">You have been logged out.</div>
 			<p>
 				<label for="username">Username</label> <input type="text"
 					id="username" name="username" />
@@ -32,17 +24,11 @@
 				<label for="password">Password</label> <input type="password"
 					id="password" name="password" />
 			</p>
-			<!-- if using RememberMeConfigurer make sure remember-me matches RememberMeConfigurer#rememberMeParameter -->
-			<p>
-				<label for="remember-me">Remember Me?</label> <input type="checkbox"
-					id="remember-me" name="remember-me" />
-			</p>
 			<div>
 				<button type="submit" class="btn">Log in</button>
 			</div>
 		</fieldset>
 	</form>
-
 
 </body>
 </html>
