--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 				style="padding-left: 30px;">HOME</a> 
 				<a th:href="@{/forums/{userId}/(userId=${userId})}" style="padding-left: 30px;">FORUMS</a> 
 				<a th:href="@{/routes/{userId}/(userId=${userId})}" style="padding-left: 30px;">ROUTES</a>
-				<a th:text="'User: ' + ${user}" style="padding-left: 30px; font-style: italic;"></a>
+				<a th:text="'User: ' + ${username}" style="padding-left: 30px; font-style: italic;"></a>
 				
 			<!-- 		<div class="search-container"> -->
 			<!-- 			<input type="text" placeholder="Search..."> -->
@@ -54,6 +54,10 @@
 			</tbody>
 		</table>
 	</div>
-
+	<form method="post" action="/logout">
+		<input type="hidden" th:name="${_csrf.parameterName}"
+			th:value="${_csrf.token}" />
+		<button type="submit">Logout</button>
+	</form>
 </body>
 </html>
