--- a/src/main/resources/static/logins/login.css
+++ b/src/main/resources/static/logins/login.css
@@ -29,10 +29,14 @@ img {
 
 .login {
   width: 300px;
-  padding: 30px;
+  padding: 40px;
   background-color: #D3CEBD;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 h2 {
@@ -57,6 +61,7 @@ input[type="password"] {
   border-radius: 5px;
   border: none;
   background-color: #e6e6e6;
+  justify-content: center;
 }
 
 button[type="submit"] {
@@ -64,7 +69,7 @@ button[type="submit"] {
   border-radius: 5px;
   border: none;
   background-color:#29b43c;
-  color: #000000;
+  color: #e6e6e6;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
@@ -74,4 +79,45 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color:  #94D67D;
   color:#4D574A;
+  font-family: Tahoma;
+}
+button.btn {
+	font-family: Tahoma;
+    display: block;
+    margin: 0 auto;
+}
+
+/* Remove the black border */
+.login form {
+    border: none;
+}
+
+/* Add some modern styling */
+.login fieldset {
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+}
+.login legend {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.login label {
+    display: block;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+.login input[type="text"],
+.login input[type="password"] {
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    font-size: 18px;
+    margin-bottom: 10px;
+    padding: 10px;
+    width: 100%;
+}
+fieldset {
+  border: none;
 }
