--- a/src/main/resources/templates/forums.html
+++ b/src/main/resources/templates/forums.html
@@ -8,16 +8,21 @@
 <body>
 
 	<nav>
-		<img style="padding-left: 30px;" class="logo" th:src="@{/images/8.png}" alt="Logo"> 
-			
-			<a th:href="@{/home/{userId}/(userId=${userId})}"	style="padding-left: 30px;">HOME</a> 
-			
-			<a th:href="@{/forums/{userId}/(userId=${userId})}" style="padding-left: 30px;">FORUMS</a> 
-			
-			<a th:href="@{/routes/{userId}/(userId=${userId})}"	style="padding-left: 30px;">ROUTES</a>
-			
-			<a th:text="'User: ' + ${user}" style="padding-left: 30px; font-style: italic;"></a>
-
+		<img style="padding-left: 30px;" class="logo"
+			th:src="@{/images/8.png}" alt="Logo"> <a
+			th:href="@{/home/{userId}/(userId=${userId})}"
+			style="padding-left: 30px;">HOME</a> <a
+			th:href="@{/forums/{userId}/(userId=${userId})}"
+			style="padding-left: 30px;">FORUMS</a> <a
+			th:href="@{/routes/{userId}/(userId=${userId})}"
+			style="padding-left: 30px;">ROUTES</a> <a
+			th:text="'User: ' + ${user}"
+			style="padding-left: 30px; font-style: italic;"></a>
+		<form method="post" action="/logout">
+			<input type="hidden" th:name="${_csrf.parameterName}"
+				th:value="${_csrf.token}" />
+			<button class="button" type="submit">LOGOUT</button>
+		</form>
 	</nav>
 	<div class="bottom-half">
 
