--- a/src/main/resources/templates/createroute.html
+++ b/src/main/resources/templates/createroute.html
@@ -18,7 +18,11 @@
 			style="padding-left: 30px;">ROUTES</a> <a
 			th:text="'User: ' + ${user}"
 			style="padding-left: 30px; font-style: italic;"></a>
-
+		<form method="post" action="/logout">
+			<input type="hidden" th:name="${_csrf.parameterName}"
+				th:value="${_csrf.token}" />
+			<button class="button" type="submit">LOGOUT</button>
+		</form>
 	</nav>
 	<div class="head">
 
@@ -59,7 +63,8 @@
 		<div class="field">description</div>
 		<div class="input-container">
 			<div class="message-window">
-				<textarea name="description" placeholder="Type your message here..." th:value="${route.description}"></textarea>
+				<textarea name="description" placeholder="Type your message here..."
+					th:value="${route.description}"></textarea>
 			</div>
 		</div>
 		<div>
