--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,11 +10,19 @@
 		<nav>
 			<img style="padding-left: 30px;" class="logo"
 				th:src="@{/images/8.png}" alt="Logo"> <a href="#"
-				style="padding-left: 30px;">HOME</a> 
-				<a th:href="@{/forums/{userId}/(userId=${userId})}" style="padding-left: 30px;">FORUMS</a> 
-				<a th:href="@{/routes/{userId}/(userId=${userId})}" style="padding-left: 30px;">ROUTES</a>
-				<a th:text="'User: ' + ${username}" style="padding-left: 30px; font-style: italic;"></a>
-				
+				style="padding-left: 30px;">HOME</a> <a
+				th:href="@{/forums/{userId}/(userId=${userId})}"
+				style="padding-left: 30px;">FORUMS</a> <a
+				th:href="@{/routes/{userId}/(userId=${userId})}"
+				style="padding-left: 30px;">ROUTES</a> <a
+				th:text="'User: ' + ${user}"
+				style="padding-left: 30px; font-style: italic;"></a>
+			<form method="post" action="/logout">
+				<input type="hidden" th:name="${_csrf.parameterName}"
+					th:value="${_csrf.token}" />
+				<button class="button" type="submit">LOGOUT</button>
+			</form>
+
 			<!-- 		<div class="search-container"> -->
 			<!-- 			<input type="text" placeholder="Search..."> -->
 			<!-- 			<button type="submit">Search</button> -->
@@ -37,9 +45,9 @@
 		<script src="/home/home.js"></script>
 	</div>
 	<div class="bottom-half">
-		
-			<p class="BH-head">COMPLETED ROUTES</p>
-		
+
+		<p class="BH-head">COMPLETED ROUTES</p>
+
 	</div>
 	<div>
 		<table class="channel-table">
@@ -47,17 +55,12 @@
 				<tr th:each="route: ${routes}">
 					<td><a class="channels"
 						th:href="@{/route/{routeId}/{userId}(routeId=${route.routeId}, userId=${userId})}"
-						th:text="${route.name}"></a> <br /> <span
-						class="description"><small th:text="${route.grade}"></small></span>
-					</td>
+						th:text="${route.name}"></a> <br /> <span class="description"><small
+							th:text="${route.grade}"></small></span></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
-	<form method="post" action="/logout">
-		<input type="hidden" th:name="${_csrf.parameterName}"
-			th:value="${_csrf.token}" />
-		<button type="submit">Logout</button>
-	</form>
+
 </body>
 </html>
