--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,7 +12,7 @@
 				<input type="hidden" th:name="${_csrf.parameterName}"
 					th:value="${_csrf.token}" />
 
-				<legend>Please Login</legend>
+				<legend>Please Register</legend>
 				<!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
 				<div th:if="${param.error != null}">
 					Failed to login.
