--- a/src/main/resources/templates/route.html
+++ b/src/main/resources/templates/route.html
@@ -18,7 +18,11 @@
 			style="padding-left: 30px;">ROUTES</a> <a
 			th:text="'User: ' + ${username}"
 			style="padding-left: 30px; font-style: italic;"></a>
-
+		<form method="post" action="/logout">
+			<input type="hidden" th:name="${_csrf.parameterName}"
+				th:value="${_csrf.token}" />
+			<button class="button" type="submit">LOGOUT</button>
+		</form>
 	</nav>
 	<div class="head">
 
