--- a/src/main/resources/templates/routes.html
+++ b/src/main/resources/templates/routes.html
@@ -13,10 +13,16 @@
 			th:href="@{/home/{userId}/(userId=${userId})}"
 			style="padding-left: 30px;">HOME</a> <a
 			th:href="@{/forums/{userId}/(userId=${userId})}"
-			style="padding-left: 30px;">FORUMS</a> <a th:href="@{/routes/{userId}/(userId=${userId})}"
-			style="padding-left: 30px;">ROUTES</a>
-			<a th:text="'User: ' + ${user}" style="padding-left: 30px; font-style: italic;"></a>
-
+			style="padding-left: 30px;">FORUMS</a> <a
+			th:href="@{/routes/{userId}/(userId=${userId})}"
+			style="padding-left: 30px;">ROUTES</a> <a
+			th:text="'User: ' + ${user}"
+			style="padding-left: 30px; font-style: italic;"></a>
+		<form method="post" action="/logout">
+			<input type="hidden" th:name="${_csrf.parameterName}"
+				th:value="${_csrf.token}" />
+			<button class="button" type="submit">LOGOUT</button>
+		</form>
 	</nav>
 	<div class="bottom-half">
 
@@ -29,21 +35,21 @@
 				<tr th:each="route: ${routes}">
 					<td><a class="channels"
 						th:href="@{/route/{routeId}/{userId}(routeId=${route.routeId}, userId=${userId})}"
-						th:text="${route.name}"></a> <br /> <span
-						class="description"><small th:text="${route.grade}"></small></span>
-					</td>
+						th:text="${route.name}"></a> <br /> <span class="description"><small
+							th:text="${route.grade}"></small></span></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 	<div class="form-container">
-		<form method="get" th:action="@{/createroute/{userId}/(userId=${userId})}">
-		
+		<form method="get"
+			th:action="@{/createroute/{userId}/(userId=${userId})}">
+
 			<div>
 				<input class="submit-button" type="submit" value="Add New Route" />
 			</div>
 		</form>
-		
+
 	</div>
 
 </body>
