--- a/src/main/resources/templates/updateroute.html
+++ b/src/main/resources/templates/updateroute.html
@@ -18,7 +18,11 @@
 			style="padding-left: 30px;">ROUTES</a> <a
 			th:text="'User: ' + ${user}"
 			style="padding-left: 30px; font-style: italic;"></a>
-
+		<form method="post" action="/logout">
+			<input type="hidden" th:name="${_csrf.parameterName}"
+				th:value="${_csrf.token}" />
+			<button class="button" type="submit">LOGOUT</button>
+		</form>
 	</nav>
 	<div class="head">
 
@@ -69,8 +73,9 @@
 		</div>
 
 	</form>
-	<form method="post" th:action="@{/updateroute/{routeId}/{userId}/delete(routeId=${route.routeId},userId=${userId})}">
-		<input type="hidden" th:field="${route.routeId}" /> <input
+	<form method="post"
+		th:action="@{/updateroute/{routeId}/{userId}/delete(routeId=${route.routeId},userId=${userId})}">
+		<input type="hidden" th:field="${routeId}" /> <input
 			class="delete-button" type="submit" value="Delete" />
 	</form>
 </body>
