--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
 				th:href="@{/routes/{userId}/(userId=${userId})}"
 				style="padding-left: 30px;">ROUTES</a> <a
 				th:text="'User: ' + ${user}"
-				style="padding-left: 30px; font-style: italic;"></a>
+				style="padding-left: 30px; font-style: italic;" th:href="@{/user/{userId}/(userId=${userId})}"></a>
 			<form method="post" action="/logout">
 				<input type="hidden" th:name="${_csrf.parameterName}"
 					th:value="${_csrf.token}" />
