register page update

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,6 +30,9 @@
 				<div>
 					<button type="submit" class="btn">Log in</button>
 				</div>
+				
+				<p>Not registered? <a href="/register" class="btn">Click HERE</a> to create an account.</p>
+				
 
 			</form>
 		</div>
