--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 	<div class="container">
 		<img th:src="@{/images/8.png}" alt="Welcome to Rock On!">
 		<div class="login">
-			<form action="" method="post">
+			<form action="/login" method="post">
 				<input type="hidden" th:name="${_csrf.parameterName}"
 					th:value="${_csrf.token}" />
 
