revert to further test

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-<title>Centered Navbar with Search Bar Example</title>
+<title>Home</title>
 <link rel="stylesheet" type="text/css" href="/home/home.css">
 
 </head>
